Applied two-column layout using Flexbox to name fields

--- a/register.html
+++ b/register.html
@@ -14,57 +14,51 @@
           src="https://img.icons8.com/?size=48&id=23309&format=png"
           alt="avatar"
         />
-        <h3 class="test-color">Create Account</h3>
-        <p>Join us today to get started</p>
+        <h3 class="test-color">Register</h3>
+        <p>Enter your information detail</p>
       </div>
 
-      <a action="#">
-        <div class="input-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" placeholder="choose a username" />
+      <div class="input-group">
+        <div class="two-column-container">
+          <div>
+            <label for="username">First Name</label>
+            <input type="text" id="firstname" placeholder="Enter first name" />
+          </div>
+          <div>
+            <label for="username">Last Name</label>
+            <input type="text" id="lastname" placeholder="Enter last name" />
+          </div>
         </div>
+      </div>
 
-        <div class="input-group">
-          <label for="email">Email Address</label>
-          <input
-            type="email"
-            id="email"
-            placeholder="enter your email address"
-          />
-        </div>
+      <div class="input-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" placeholder="Enter username" />
+      </div>
 
-        <div class="input-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            id="password"
-            placeholder="create a password"
-          />
-        </div>
+      <div class="input-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" placeholder="enter your email address" />
+      </div>
 
-        <div class="input-group">
-          <label for="confirm_password">Confirm Password</label>
-          <input
-            type="password"
-            id="confirm_password"
-            placeholder="confirm your password"
-          />
-        </div>
+      <div class="input-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter password" />
+      </div>
 
       <a href="index.html">
         <button class="btn">
           <img
             src="https://img.icons8.com/?size=50&id=10738&format=png"
-            alt="Sign Up Icon"
+            alt="Register Icon"
           />
-       Register
+          Register
         </button>
       </a>
 
-        <div class="register">
-          Already have an account? <a href="index.html">Login Here</a>
-        </div>
-      </form>
+      <div class="register">
+        Already have an account? <a href="index.html">Login Here</a>
+      </div>
     </div>
   </body>
 </html>
