--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Please login to your account</p>
       </div>
       <div class="input-group">
-        <label for="">Usernane</label>
+        <label for="">Username</label>
         <input type="text" placeholder="enter your username" />
       </div>
       <div class="input-group">
