--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
 
       <div class="input-group">
         <label for="email">Email Address</label>
-        <input type="email" id="email" placeholder="enter your email address" />
+        <input type="email" id="email" placeholder="Enter your email address" />
       </div>
 
       <div class="input-group">
