--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </div>
       <div class="input-group">
         <label for="">Username</label>
-        <input type="text" placeholder="enter your username" />
+        <input type="text" placeholder="Enter your username" />
       </div>
       <div class="input-group">
         <label for="">Password</label>
-        <input type="password" placeholder="enter your password" />
+        <input type="password" placeholder="Enter your password" />
       </div>
       <div class="forgot">
         <a href="#">Forgot Password</a>
