applied two-layout-contain

--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
 
       <div class="input-group">
         <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter username" />
+        <input type="text" id="username" placeholder="Enter your username" />
       </div>
 
       <div class="input-group">
