--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Registration Form</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/login-style.css" />
   </head>
   <body>
     <div class="container">
@@ -55,7 +55,7 @@
       </button>
 
       <div class="register">
-        Already have an account? <a href="index.html">Login Here</a>
+        Already have an account? <a href="login.html">Login Here</a>
       </div>
     </div>
   </body>
