--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             alt="Product image"
           />
           <p class="price">$100.99</p>
-          <p class="title">Gold & Silver Bracelet</p>
+          <p class="title">Gold Bracelet</p>
           <button class="add-to-card">
             <i data-lucide="shopping-cart" class="icon-card"></i>Add to cart
           </button>
@@ -126,7 +126,7 @@
             alt="Product image"
           />
           <p class="price">$100.99</p>
-          <p class="title">Diamond Promise Ring</p>
+          <p class="title">Diamond Ring</p>
           <button class="add-to-card">
             <i data-lucide="shopping-cart" class="icon-card"></i>Add to cart
           </button>
