--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div class="product--detail-container">
+      <!-- <div class="back">
+        <a href="index.html">
+          <button>back</button>
+        </a>
+      </div> -->
+
       <div class="product-detail">
         <div class="product-detail-image">
           <img
