--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           />
         </div>
         <ul class="navbar-list">
-          <li><a href="" class="nav-item">Home</a></li>
+          <li><a href="index.html" class="nav-item">Home</a></li>
           <li><a href="" class="nav-item">Product</a></li>
           <li><a href="" class="nav-item">Contact</a></li>
           <li><a href="" class="nav-item">About</a></li>
@@ -210,21 +210,21 @@
         <a href="https://www.facebook.com" target="_blank">
           <img
             class="icon-style"
-            src="https://img.icons8.com/?size=100&id=13912&format=png&color=000000"
+            src="https://img.icons8.com/?size=48&id=118497&format=png"
             alt="Facebook"
           />
         </a>
         <a href="https://www.instagram.com" target="_blank">
           <img
             class="icon-style"
-            src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000"
+            src="https://cdn-icons-png.flaticon.com/128/15707/15707749.png"
             alt="Instagram"
           />
         </a>
         <a href="https://www.tiktok.com" target="_blank">
           <img
             class="icon-style"
-            src="https://img.icons8.com/?size=50&id=118638&format=png"
+            src="https://cdn-icons-png.flaticon.com/128/4782/4782345.png"
             alt="Tiktok"
           />
         </a>
