--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework Day10</title>
-    <link rel="stylesheet" href="./assets/login-style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
-  <body>
+  <body class="login">
     <div class="container">
       <div>
         <img
@@ -29,7 +29,7 @@
         <a href="#">Forgot Password</a>
       </div>
 
-      <button class="btn">
+      <button class="btn-login">
         <img src="https://img.icons8.com/?size=50&id=26218&format=png" alt="" />
         Login
       </button>
