--- a/register.html
+++ b/register.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Registration Form</title>
-    <link rel="stylesheet" href="./assets/login-style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
-  <body>
+  <body class="login">
     <div class="container">
       <div>
         <img
@@ -46,7 +46,7 @@
         <input type="password" id="password" placeholder="Enter password" />
       </div>
 
-      <button class="btn">
+      <button class="btn-login">
         <img
           src="https://img.icons8.com/?size=50&id=10738&format=png"
           alt="Register Icon"
