responsive nav-bar & bottom bar

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <button class="btn">
           <a href="register.html">Register</a>
         </button>
+         <div class="menu-icon">
+        <i data-lucide="menu"></i>
+      </div>
       </div>
       <!-- <div class="product-cover">
         <h3>ហាងលក់ សម្លៀកបំពាក់ ហ្វាហ្វា</h3>
@@ -239,6 +242,25 @@
           </div>
         </div>
       </footer>
+         <!-- nav-bottom -->
+          <nav class="nav-bottom">
+      <a href="" class="nav-item-bottom active">
+        <i data-lucide="house"></i>
+        Home
+      </a>
+      <a href="" class="nav-item-bottom">
+        <i data-lucide="shopping-cart"></i>
+        Product
+      </a>
+      <a href="" class="nav-item-bottom">
+        <i data-lucide="circle-user-round"></i>
+        Contact
+      </a>
+      <a href="" class="nav-item-bottom">
+        <i data-lucide="info"></i>
+        About
+      </a>
+    </nav>
         <script src="https://unpkg.com/lucide@latest"></script>
     <script>
       lucide.createIcons();
