responsive product detail & related product

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://img.icons8.com/?size=80&id=yDvdNSDLpjkn&format=png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     
   </head>
 
