--- a/product-detail/detail.html
+++ b/product-detail/detail.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <div class="product-detail-container">
-      <!-- <div class="back">
-        <a href="index.html">
-          <button>back</button>
-        </a>
-      </div> -->
+      <a href="../index.html">
+        <i data-lucide="move-left" class="back"></i>
+      </a>
 
       <div class="product-detail">
         <!-- left -->
@@ -115,6 +113,7 @@
         </div>
       </div>
     </div>
+
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
       lucide.createIcons();
