--- a/product-detail/detail.html
+++ b/product-detail/detail.html
@@ -142,7 +142,7 @@
         </div>
       </div>
     </div> -->
-    <div class="container py-5">
+    <div class="product-detail-container py-5">
       <a href="../index.html">
         <i
           data-lucide="move-left"
