--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 class="card-title fw-bold text-truncate"
                 title="Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops"
               >
-                Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
+                 Backpack
               </h5>
               <div
                 class="d-flex justify-content-center align-items-baseline mb-2"
@@ -233,11 +233,11 @@
                 >
                 <a href="#" class="btn btn-primary btn-sm"
                   ><i
-                    data-lucide="shopping-cart"
+                    data-lucide="credit-card"
                     class="icon-card"
                     style="height: 18px"
                   ></i>
-                  Buy Now</a
+                  Buy</a
                 >
               </div>
             </div>
@@ -283,11 +283,11 @@
                 >
                 <a href="#" class="btn btn-primary btn-sm"
                   ><i
-                    data-lucide="shopping-cart"
+                    data-lucide="credit-card"
                     class="icon-card"
                     style="height: 18px"
                   ></i>
-                  Buy Now</a
+                  Buy</a
                 >
               </div>
             </div>
@@ -333,11 +333,11 @@
                 >
                 <a href="#" class="btn btn-primary btn-sm"
                   ><i
-                    data-lucide="shopping-cart"
+                    data-lucide="credit-card"
                     class="icon-card"
                     style="height: 18px"
                   ></i>
-                  Buy Now</a
+                  Buy</a
                 >
               </div>
             </div>
@@ -388,11 +388,11 @@
                 >
                 <a href="#" class="btn btn-primary btn-sm"
                   ><i
-                    data-lucide="shopping-cart"
+                    data-lucide="credit-card"
                     class="icon-card"
                     style="height: 18px"
                   ></i>
-                  Buy Now</a
+                  Buy</a
                 >
               </div>
             </div>
@@ -438,11 +438,11 @@
                 >
                 <a href="#" class="btn btn-primary btn-sm"
                   ><i
-                    data-lucide="shopping-cart"
+                    data-lucide="credit-card"
                     class="icon-card"
                     style="height: 18px"
                   ></i>
-                  Buy Now</a
+                  Buy</a
                 >
               </div>
             </div>
@@ -488,11 +488,11 @@
                 >
                 <a href="#" class="btn btn-primary btn-sm"
                   ><i
-                    data-lucide="shopping-cart"
+                    data-lucide="credit-card"
                     class="icon-card"
                     style="height: 18px"
                   ></i>
-                  Buy Now</a
+                  Buy</a
                 >
               </div>
             </div>
