--- a/product-detail/detail.html
+++ b/product-detail/detail.html
@@ -331,7 +331,7 @@
                             </div>
                             <div class="d-flex justify-content-center mt-auto gap-2">
                                 <a
-                                    href="product-detail/detail.html"
+                                    href="../product-detail/detail.html"
                                     class="btn btn-outline-info btn-sm text-decoration-none"
                                 >Details</a
                                 >
@@ -380,7 +380,7 @@
                       </div>
                        <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
@@ -429,7 +429,7 @@
                       </div>
                        <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
@@ -478,7 +478,7 @@
                       </div>
                        <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
@@ -532,7 +532,7 @@
                       </div>
                        <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
@@ -581,7 +581,7 @@
                       </div>
                        <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
@@ -630,7 +630,7 @@
                       </div>
                       <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
@@ -679,7 +679,7 @@
                       </div>
                       <div class="d-flex justify-content-center mt-auto gap-2">
                         <a
-                          href="product-detail/detail.html"
+                          href="../product-detail/detail.html"
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
