complete some point in project

--- a/product-detail/detail.html
+++ b/product-detail/detail.html
@@ -335,14 +335,10 @@
                                     class="btn btn-outline-info btn-sm text-decoration-none"
                                 >Details</a
                                 >
-                                <a href="#" class="btn btn-primary btn-sm"
-                                ><i
-                                    data-lucide="credit-card"
-                                    class="icon-card"
-                                    style="height: 18px"
-                                ></i>
-                                Buy</a
-                                >
+                                   <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                             </div>
                         </div>
                     </div>
@@ -384,14 +380,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                          <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
@@ -433,14 +425,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                       <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
@@ -482,14 +470,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                        <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
@@ -536,14 +520,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                        <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
@@ -585,14 +565,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                        <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
@@ -634,14 +610,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                       <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
@@ -683,14 +655,10 @@
                           class="btn btn-outline-info btn-sm text-decoration-none"
                           >Details</a
                         >
-                        <a href="#" class="btn btn-primary btn-sm"
-                          ><i
-                            data-lucide="credit-card"
-                            class="icon-card"
-                            style="height: 18px"
-                          ></i>
-                          Buy</a
-                        >
+                        <a href="#" class="btn btn-primary btn-sm"><i
+                                      data-lucide="shopping-cart"
+                                      class="icon-card"
+                                      style="height: 18px"></i></a>
                       </div>
                     </div>
                   </div>
